--- a/src/views/manager.hbs
+++ b/src/views/manager.hbs
@@ -7,7 +7,7 @@
           class="w-16 h-16 object-cover rounded-circle img-thumbnail"
           alt="Imagen de perfil"
         />
-        <form action="/users/current" method="get">
+        <form action="/current" method="get">
           <input type="submit" value="View Profile" class="btn btn-dark mt-2" />
         </form>
       </div>
