--- a/src/views/github-login.hbs
+++ b/src/views/github-login.hbs
@@ -19,8 +19,8 @@
     <h2 class="text-xl font-semibold mb-2">¿No quieres usar Github? Puedes usar
       los siguientes enlaces:</h2>
     <p class="mb-2">¿No estás registrado?
-      <a href="/users/register" class="text-blue-500">Registraté aquí</a></p>
+      <a href="/register" class="text-blue-500">Registraté aquí</a></p>
     <p>¿Ya tienes una cuenta con nosotros?
-      <a href="/users/login" class="text-blue-500">Haz login aquí</a></p>
+      <a href="/login" class="text-blue-500">Haz login aquí</a></p>
   </div>
 </div>
