--- a/src/views/productManager.hbs
+++ b/src/views/productManager.hbs
@@ -11,7 +11,7 @@
       </form>
     </div>
     <div>
-      <form action="/admin/manager" method="get">
+      <form action="/manager" method="get">
         <input type="submit" value="Manager" class="btn btn-dark" />
       </form>
     </div>
