--- a/src/views/success.hbs
+++ b/src/views/success.hbs
@@ -7,7 +7,7 @@
           class="w-16 h-16 object-cover rounded-circle img-thumbnail"
           alt="Imagen de perfil"
         />
-        <form action="/users/current" method="get">
+        <form action="/current" method="get">
           <input type="submit" value="View Profile" class="btn btn-dark mt-2" />
         </form>
       </div>
@@ -21,7 +21,7 @@
         {{/if}}
         <h2>Role: {{user.role}}</h2>
         {{#ifRoleEquals user.role "admin"}}
-          <form action="admin/manager" method="get">
+          <form action="/manager" method="get">
             <input type="submit" value="Manager" class="btn btn-dark" />
           </form>
         {{/ifRoleEquals}}
